--- a/build.xml
+++ b/build.xml
@@ -13,8 +13,8 @@
       <sf:retrieve username="${Sandbox1.username}"
                    password="${Sandbox1.password}"
                    serverurl="${sfSandbox.serverurl}"
-           retrieveTarget="${Sandbox1.retrieveTarget}"
-           unpackaged="${Sandbox1.unpackaged}"/>
+          retrieveTarget="codepkg"
+           unpackaged="codepkg/package.xml"/>
 <echo message="Commiting all changes with message ${gt.commitMessage}" />
 
 <git command="add" dir="${Sandbox1.gitDirectory}">
