--- a/build.xml
+++ b/build.xml
@@ -9,6 +9,7 @@
             deployRoot="${Sandbox2.retrieveTarget}"
             runAllTests="true" />
   </target>
+  <echo message = "${Sandbox1.username}" />
   <target name="retrieve">
       <sf:retrieve username="${Sandbox1.username}"
                    password="${Sandbox1.password}"
