--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
            unpackaged="DemoPkg/package.xml"/>
 <echo message="Commiting all changes with message ${gt.commitMessage}" />
 
-<git command="add" dir="${Sandbox1.gitDirectory}">
+<!-- <git command="add" dir="${Sandbox1.gitDirectory}">
     <args>
         <arg value="." />
     </args>
@@ -27,7 +27,7 @@
     <args>
         <arg value="-am ${gt.commitMessage}" />
     </args>
-</git>
+</git> -->
 </target>
 
 <macrodef name="git">
