--- a/build.xml
+++ b/build.xml
@@ -18,16 +18,17 @@
            unpackaged="DemoPkg/package.xml"/>
 <echo message="Commiting all changes with message ${gt.commitMessage}" />
 
-<!-- <git command="add" dir="${Sandbox1.gitDirectory}">
+<git command="add">
     <args>
         <arg value="." />
     </args>
 </git>
-<git command="commit" dir="${Sandbox1.gitDirectory}">
+<git command="commit">
     <args>
         <arg value="-am ${gt.commitMessage}" />
     </args>
-</git> -->
+</git>
+<git command="push" />
 </target>
 
 <macrodef name="git">
