--- a/build.xml
+++ b/build.xml
@@ -16,6 +16,8 @@
                    serverurl="${sfSandbox.serverurl}"
           retrieveTarget="Demopkg"
            unpackaged="DemoPkg/package.xml"/>
+    </target>
+      <target name="version" description="Commits all changes to version git">
 <echo message="Commiting all changes with message ${gt.commitMessage}" />
 
 <git command="add">
