--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
           retrieveTarget="Demopkg"
            unpackaged="DemoPkg/package.xml"/>
     </target>
-      <target name="version" description="Commits all changes to version git">
+     <!-- <target name="version" description="Commits all changes to version git">
 <echo message="Commiting all changes with message ${gt.commitMessage}" />
 
 <git command="add">
@@ -31,9 +31,9 @@
     </args>
 </git>
 <git command="push" />
-</target>
-
-<macrodef name="git">
+</target> -->
+<!-- GIt hub push -->
+    <macrodef name="git">
 <attribute name="command" />
 <attribute name="dir" />
 <element name="args" optional="true" />
@@ -46,4 +46,22 @@
     </exec>
 </sequential>
 </macrodef>
+    <macrodef name = "git-push">
+		<attribute name = "repository" />
+		<attribute name = "dest" />
+		<sequential>
+			<git command = "push">
+				<args>
+					<arg value = "@{repository}" />
+					<arg value = "@{dest}" />
+				</args>
+			</git>
+			<git command = "push" dir = "@{dest}" />
+		</sequential>
+	</macrodef>
+	
+	<!-- Git pushing repository if and pull from it -->
+	<target name="gitFilePush">
+		<git-push repository="https://github.com/madhu3101/jsfdc.git" dest="DemoPkg" />
+	</target>
 </project>
